--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-network-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/boro101094/social-network-API/issues"
   },
-  "homepage": "https://github.com/boro101094/social-network-API#readme"
+  "homepage": "https://github.com/boro101094/social-network-API#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.3.4"
+  }
 }
